add borrowing games and list of MyGames and BorrowedGames