@@ -1,10 +1,15 @@
 package com.gt.gamexchanger.service;
 
 import com.gt.gamexchanger.dto.GameDto;
+import com.gt.gamexchanger.enums.GameStatus;
+import com.gt.gamexchanger.exception.NoExistingUser;
+import com.gt.gamexchanger.exception.NoGameExists;
 import com.gt.gamexchanger.mapper.DtoMapper;
 import com.gt.gamexchanger.mapper.GameDtoMapper;
 import com.gt.gamexchanger.model.Game;
+import com.gt.gamexchanger.model.User;
 import com.gt.gamexchanger.repository.GameRepository;
+import com.gt.gamexchanger.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.Comparator;
@@ -16,52 +21,61 @@ import java.util.stream.Collectors;
 public class GameService {
     private final GameRepository gameRepository;
     private final DtoMapper<GameDto, Game> gameDtoMapper;
+    private final UserRepository userRepository;
 
 
-
-    public GameService(GameRepository gameRepository, GameDtoMapper gameDtoMapper) {
+    public GameService(GameRepository gameRepository, GameDtoMapper gameDtoMapper, UserRepository userRepository) {
         this.gameRepository = gameRepository;
         this.gameDtoMapper = gameDtoMapper;
+        this.userRepository = userRepository;
     }
 
-    public GameDto addGame(GameDto gameDto) {
-        Game game = (Game) gameDtoMapper.toDomainObject(gameDto);
-        gameRepository.addGame(game);
-        return (GameDto) gameDtoMapper.toDto(game);
+    public GameDto addGame(Long ownerId, GameDto gameDto) {
+        Game game = gameDtoMapper.toDomainObject(gameDto);
+        if (userRepository.findById(ownerId).isPresent()) {
+            User owner = userRepository.findById(ownerId).get();
+            game.setOwner(owner);
+            game.setActualUser(owner);
+            gameRepository.save(game);
+            return (GameDto) gameDtoMapper.toDto(game);
+        } else {
+            throw new NoExistingUser();
+        }
     }
 
     public List<GameDto> getAllGames() {
-
-   List<Game> games = gameRepository.getAllGames().stream()
-           .sorted(Comparator.comparing(Game::getName)).toList();
-
-   return games.stream().map(gameDtoMapper::toDto).collect(Collectors.toList());
+        return gameRepository.findAll().stream()
+                .sorted(Comparator.comparing(Game::getGameStatus))
+                .map(gameDtoMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     public List<GameDto> getGamesByName(String name) {
-        return gameRepository.getGamesByName(name).stream()
+        return gameRepository.findAllByName(name).stream()
                 .sorted(Comparator.comparing(Game::getGameStatus))
                 .map(gameDtoMapper::toDto)
                 .collect(Collectors.toList());
     }
 
     public Optional<Game> getGameById(Long id) {
-        return Optional.ofNullable(gameRepository.getGameById(id));
+        return gameRepository.findById(id);
     }
 
-    public boolean deleteGame(Long id) {
+    public void deleteGame(Long id) {
         if (getGameById(id).isPresent()) {
-            gameRepository.deleteGame(id);
-            return true;
+            gameRepository.deleteById(id);
+        } else {
+            throw new NoGameExists();
         }
-        return false;
     }
 
     public void updateGame(Long gameId, GameDto gameDto) {
-       Optional<Game> gameToUpdate = gameRepository.findById(gameId);
+        Optional<Game> gameToUpdate = getGameById(gameId);
         if (gameToUpdate.isPresent()) {
-            var game = gameToUpdate.get();
-            updateGameFields(game, gameDto);
+            var gameToSafe = gameToUpdate.get();
+            updateGameFields(gameToSafe, gameDto);
+        } else {
+            throw new NoGameExists();
         }
     }
 
@@ -85,14 +99,44 @@ public class GameService {
     }
 
     public List<GameDto> getAllMyGames(Long userId) {
-      return    gameRepository.findAllByOwnerId(userId).stream()
+        return gameRepository.findAllByOwnerId(userId).stream()
                 .map(gameDtoMapper::toDto)
                 .toList();
-
     }
-    public List<GameDto> getAllBorowedGame(Long userId) {
-        return gameRepository.getMyBorrowedGames(userId).stream()
+
+    public List<GameDto> getAllBorrowedGame(Long userId) {
+        return gameRepository.getBorrowed(userId).stream()
                 .map(gameDtoMapper::toDto)
                 .toList();
+    }
+
+    public List<GameDto> getByContainingName(String name) {
+        return gameRepository.findAllByNameContaining(name).stream()
+                .sorted(Comparator.comparing(Game::getGameStatus))
+                .map(gameDtoMapper::toDto)
+                .collect(Collectors.toList());
+    }
+
+    public void borrowGame(Long gameId, String email) {
+        Optional<Game> gameOP = gameRepository.findById(gameId);
+        Optional<User> userOP = userRepository.findByEmail(email);
+        User user;
+        Game game;
+        if (gameOP.isPresent() && userOP.isPresent()) {
+             game = gameOP.get();
+             user = userOP.get();
+            game.setActualUser(user);
+            game.setGameStatus(GameStatus.LENT);
+            List<Game> games = user.getBorrowedGames();
+            games.add(game);
+            user.setBorrowedGames(games);
+            userRepository.save(user);
+            gameRepository.save(game);
+
+        } else {
+            throw new NoGameExists();
+        }
+
+
     }
 }
